# rocket_rust_auth_api

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  id_rsa_priv.pem  id_rsa_pub.pem
migrations/2021-12-27-211125_create_user/: up.sql
src/: connection.rs  main.rs  schema.rs
src/controllers/: authenticate.rs  mod.rs  user.rs
src/guards/: verify_token.rs
src/models/: user.rs
src/repository/: user_repository.rs
src/routes/: authenticate.rs  mod.rs  user.rs
src/utils/: http.rs  jsonwebtoken.rs  mod.rs  password.rs
