[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "^0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
rand = "0.8.4"
rust-argon2 = "0.8"
regex = "1"
chrono = "0.4"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
